code13/landing/src/styles/landing-layout.less
@import "mixins";

// Keep colors in sync with GetStarted.css .hero colors
@blueGradient: radial-gradient(#00BECC, #2B7277);

/***************************************
 *   Responsive Vertical Whitespace    *
 ***************************************/

// keep these pretty with footer padding at bottom of file

section:not(:first-of-type) {
  padding-top: 10vh;
}

section:not(:last-child),
.ui.container:not(:last-child) {
  padding-bottom: 10vh;
}

.ui.container + .ui.container {
  padding-top: 10vh;
}

.ui.section.divider:not(.fitted) {
  margin: 8vh 0;
}

.ui.divider:not(.fitted) {
  margin: 4vh 0;
}

/***************************************
 *                Hero                 *
 ***************************************/
.mgb-hero {
  background: @blueGradient;
  padding-top: 60px; // space for top fixed menu

  .mgb-hero-caption {
    text-align: center;
    padding: 3vh 0;
    text-shadow: 0 1px 1px fade(#000, 50);
    .ui.header {
      font-size: 2.5rem;
      margin: 0 0 0.25vh;
      //&::after { content: '@mobileBreakpoint' }
    }

    .mgb-lead {
      font-size: 1.5rem;
      margin: 0;
      padding: 0 0.3em;
      color: #FFF;
      font-weight: 300;
    }

    @media only screen and (min-width: @tabletBreakpoint) {
      .ui.header {
        font-size: 3rem;
        //&::after { content: '@tabletBreakpoint' }
      }

      .mgb-lead {
        font-size: 2rem;
      }
    }
    @media only screen and (min-width: @computerBreakpoint) {
      .ui.header {
        font-size: 3.5rem;
        //&::after { content: '@computerBreakpoint' }
      }

      .mgb-lead {
        font-size: 2.25rem;
      }
    }
    @media only screen and (min-width: @largeMonitorBreakpoint) {
      .ui.header {
        font-size: 4rem;
        //&::after { content: '@largeMonitorBreakpoint' }
      }

      .mgb-lead {
        font-size: 3rem;
      }
    }
  }
}

/***************************************
 *            Piled Section            *
 ***************************************/
.mgb-piled-container {
  position: relative;
  z-index: 1;

  .mgb-piled-panel {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }

  .mgb-piled-panel {
    margin: 0 -0.5rem;
    // keep in sync with .mgb-games shadow
    .mgb-box-shadow-border(0.25rem);
    &.back {
      background: #F4E285;
      transform: perspective(4000px) rotateY(0) skewY(-0.5deg);
    }

    &.middle {
      background: #F4A259;
      /* Note that rotateY(5deg) caused layer/zindex issues on Chrome on iOS */
      transform: perspective(5000px) rotateY(0) skewY(1deg) scale(0.99);
    }

    &.front {
      background: #BC4B51;
      /* Note that rotateY(-2deg) caused layer/zindex issues on Chrome on iOS */
      transform: perspective(3000px) rotateY(0) skewY(-0.5deg) scale(0.98);
    }
  }

  /*
   * Game
   */
  .mgb-games {
    display: flex;
    margin-top: 1rem;
    margin-bottom: 1rem;
    padding: 0 3vw;

    .mgb-game {
      position: relative; // prevents layering bugs
      max-width: 800px;
      border: 1px solid #000;
      background: #333;
      margin: -1rem auto;
      // keep in sync with .mgb-piled-panel shadow
      .mgb-box-shadow-border(0.25rem);
    }
  }
}

/***************************************
 *               Videos                *
 ***************************************/
.mgb-videos {
  background: #333;
  text-align: center;
}

/***************************************
 *             Alternating             *
 ***************************************/
.mgb-alternating {
  background: @blueGradient;
  overflow: hidden;

  .mgb-alternating-media {
    position: relative;
    width: 78%;
    float: right;
    //margin-left: auto;
    //margin-right: auto;
    .mgb-box-shadow-border(0.5em);
    z-index: 1;
  }

  .mgb-alternating-mascot {
    position: absolute;
    max-width: 30%;
    max-height: 90%;
    top: 5%;
    left: 0;
    bottom: 0;
    margin: auto;
  }

  .mgb-alternate-right {
    .mgb-alternating-media {
      float: left;
    }
    .mgb-alternating-mascot {
      left: auto;
      right: 0;
    }
  }
}

/***************************************
 *           For Everyone              *
 ***************************************/
.mgb-for-everyone-main {
  min-height: 4rem; // prevent footer jarring when switching tabs
}

.mgb-for-everyone-secondary {
  min-height: 10rem; // prevent footer jarring when switching tabs
  text-align: left;
}

/***************************************
 *               Footer                *
 ***************************************/
footer {
  // keep pretty with section and .ui.container padding at top of file
  padding: 10vh 0 5vh;
  background: #373E40;
  color: rgba(255, 255, 255, 0.8);
  font-size: 0.9em;
}

